{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 74,
  "lineage": "ac0f7954-d014-0dfd-a0aa-abd3df1efd76",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:541691250767:internet-gateway/igw-09a4425f19ffe7333",
            "id": "igw-09a4425f19ffe7333",
            "owner_id": "541691250767",
            "tags": {
              "Name": "internet-gateway"
            },
            "tags_all": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-09feb3c37141b246b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "IG_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:541691250767:route-table/rtb-07f95098852e8a4ab",
            "id": "rtb-07f95098852e8a4ab",
            "owner_id": "541691250767",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a4425f19ffe7333",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "IG-route-table"
            },
            "tags_all": {
              "Name": "IG-route-table"
            },
            "vpc_id": "vpc-09feb3c37141b246b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_routetable_to_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d90fb84549bbb254",
            "route_table_id": "rtb-07f95098852e8a4ab",
            "subnet_id": "subnet-0df1268edeca38efb"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.IG_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:541691250767:security-group/sg-0d6ac8298b8b7cbf8",
            "description": "Allow traffic between nodes and pods",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6ac8298b8b7cbf8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow TCP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/24"
                ],
                "description": "allow all from nodes",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.244.0.0/16"
                ],
                "description": "allow all from pods",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_k8s",
            "name_prefix": "",
            "owner_id": "541691250767",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09feb3c37141b246b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:541691250767:subnet/subnet-0df1268edeca38efb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.10.0.0/24",
            "id": "subnet-0df1268edeca38efb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "541691250767",
            "tags": {
              "Accounting": "Hillel",
              "Environment": "development",
              "Lesson": "Lesson17",
              "Owner": "maslovss@gmail.com",
              "Purpose": "Study",
              "Terraform": "yes"
            },
            "tags_all": {
              "Accounting": "Hillel",
              "Environment": "development",
              "Lesson": "Lesson17",
              "Owner": "maslovss@gmail.com",
              "Purpose": "Study",
              "Terraform": "yes"
            },
            "vpc_id": "vpc-09feb3c37141b246b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:541691250767:vpc/vpc-09feb3c37141b246b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/24",
            "default_network_acl_id": "acl-0d4e0bdd822c6240c",
            "default_route_table_id": "rtb-021e49174be728773",
            "default_security_group_id": "sg-058ccca806f089212",
            "dhcp_options_id": "dopt-6db12e07",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09feb3c37141b246b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-021e49174be728773",
            "owner_id": "541691250767",
            "tags": {
              "Accounting": "Hillel",
              "Environment": "development",
              "Lesson": "Lesson17",
              "Owner": "maslovss@gmail.com",
              "Purpose": "Study",
              "Terraform": "yes"
            },
            "tags_all": {
              "Accounting": "Hillel",
              "Environment": "development",
              "Lesson": "Lesson17",
              "Owner": "maslovss@gmail.com",
              "Purpose": "Study",
              "Terraform": "yes"
            }
          }
        }
      ]
    }
  ]
}